--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   <link rel="stylesheet" href="">
 </head>
 <body>
-  <h1>Home page</h1>
+  <h1>HUBBA HUBBA RESORT</h1>
+  <h2>About</h2>
+  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum quas, laudantium voluptatum necessitatibus aliquid veritatis? Debitis dolor incidunt mollitia dolorum fugit a, facilis quo asperiores eius. Dicta quas quo quam?</p>
+  <h2>Home Page</h2>
   <h2>Accomodation</h2>
   <h2>Activities</h2>
   <h2>Travel Arrangements</h2>
